# code-rag

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile.build  Dockerfile.linux  Dockerfile.linux.cuda  FullReview.md  Justfile  README.md  all_integration_tests.txt  build.ps1  build.sh  build_error.txt  build_log.txt  check_output.txt  check_output_2.txt  code-rag-commands.txt  code-rag.test.toml  code-rag.toml  code-rag.toml.example  code-ragcnf.toml  code-ragcnf.toml.template  codeReview-report.md  code_performance_report.md  code_review_report.md  config_rag.toml.template  deny.toml  docker-compose.telemetry.yml  docker-compose.yml  errors.txt  explain.md  full_test.md  gap_report.md  implementation_plan.md  interactive_test.toml  lefthook.yml  (+30 more)
.agent/rules/: project_setup.md  rust_bp.md  rust_doc.md
.agent/skills/code-performance/: SKILL.md
.agent/skills/code-performance/references/: audit_checklist.md  rust_performance.md
.agent/skills/code-review/: SKILL.md
.agent/skills/docs-maintainer/: SKILL.md
.agent/skills/docs-maintainer/assets/templates/: architecture.md  code_relations.md  command.md  configuration.md  feature.md  troubleshooting.md
.agent/skills/rust-best/: skill.md
.agent/skills/rust-lint-fmt/: skill.md
.github/workflows/: ci.yml  release.yml
.lancedb-verification/code_chunks.lance/_transactions/: 0-5516f591-119b-4734-aecd-e7a2e3ae3174.txn  1-aefa6074-0b57-4413-af0f-06c798f277b9.txn
.lancedb-verification/code_chunks.lance/_versions/: 1.manifest  2.manifest
RepHist/: PHASE3_COMPLETE.md  gap.md  implementation_plan_optimization.md  implementation_plan_tests.md  manual_test_results.md  plan_report-16.md  product_an.md  script_test_rep.md  task.md  test.md  test_result.md  timespend.md
benches/: indexing.rs  search.rs
docs/: architecture.md  commands.md  quickstart.md  quickstart_api.md
docs/architecture/: architecture.md  observability.md  relations.md
docs/commands/: grep.md  index_cmd.md  search.md  serve.md  watch.md
docs/configuration/: RRFWeights.md  chunk_strategy.md  configuration.md  models.md  telemetry_config.md
docs/features/: mcp.md  server_mode.md  supported_languages.md  telemetry.md
docs/troubleshooting/: empty_search_results.md  prometheus-api.md  prometheus_metrics.md
grafana/dashboards/: code-rag-dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
proptest-regressions/: indexer.txt
scripts/: build-all.ps1  build-linux-cuda.ps1  build-linux.ps1  build-windows-cuda.ps1  build-windows-debug.ps1  build-windows.ps1  download-ort-dlls.ps1  download_test_model.ps1  requirements-local.md
src/: bm25.rs  config.rs  context.rs  embedding.rs  error.rs  indexer.rs  lib.rs  main.rs  reporting.rs  search.rs  server.rs  storage.rs  telemetry.rs  watcher.rs
src/commands/: index.rs  mcp.rs  mod.rs  search.rs  serve.rs  start.rs  watch.rs
src/core/: error.rs  mod.rs
src/llm/: client.rs  expander.rs  mod.rs  tests.rs
src/ops/: indexer.rs
src/server/: workspace_manager.rs
test_assets/: Dockerfile  test.css  test.ex  test.go  test.html  test.java  test.js  test.json  test.ps1  test.py  test.rs  test.sh  test.yaml  test.zig
test_assets/ProjectA/: main.rs
test_assets/ProjectB/: main.rs
test_assets/advanced_structure/: __init__.py  dunder_test.py  processor.py
test_assets/advanced_structure/sub_mod/: __init__.py  deep.py
tests/: README.md  batch_ops.rs  cli_json_test.rs  config_test.rs  integration_tests.rs  interactive_walkthrough.ps1  local_model_test.rs  performance.rs  scale_test.rs  server_tests.rs  stress_test.rs  test_cli.ps1  test_cli.sh  test_server.ps1  test_workspace.rs
tests/common/: mod.rs
tests/e2e/: interactive_server.ps1  interactive_walkthrough.ps1  run_all_tests.ps1  test_cli.ps1  test_concurrent_ops.ps1  test_debug.ps1  test_server.ps1  test_watcher_workflow.ps1
tests/integration/: context.rs  core.rs  expansion.rs  isolation_test.rs  main.rs  mcp_test.rs  model.rs  resilience.rs  server.rs  streaming_test.rs  verify_hardening.rs
tests/integration/common/: mod.rs
