[package]
name = "code-rag"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
clap = { version = "4.5.54", features = ["derive"] }
fastembed = "5.8.0"
futures-util = "0.3.31"
grep = "0.4.1"
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.25"
lancedb = { version = "0.23.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
config = "0.14.0"
indicatif = "0.17.8"
colored = "2.2.0"
dirs = "5.0.1"
tree-sitter = "0.24"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.0"
tree-sitter-go = "0.23"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.23"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23.2"
tree-sitter-bash = "0.23"
tree-sitter-powershell = "0.24.5"
# tree-sitter-dockerfile = "0.2"
tree-sitter-yaml = "0.7"
tree-sitter-json = "0.24"
minijinja = { version = "2.14.0", features = ["loader"] }
tree-sitter-zig = "1.1.2"
tree-sitter-elixir = "0.3.4"
tree-sitter-haskell = "0.23.1"
tree-sitter-solidity = "1.2.13"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
