[package]
name = "code-rag"
version = "0.1.0"
edition = "2021"
description = "High-Performance Offline Code RAG CLI"
license = "MIT"
repository = "https://github.com/example/code-rag"
authors = ["Authorized User"]
keywords = ["rag", "cli", "search", "code", "ai"]
categories = ["command-line-utilities", "search-engines"]
documentation = "https://docs.rs/code-rag"
readme = "README.md"

[package.metadata.release]
tag-prefix = ""
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [{{version}}] - {{date}}" },
    { file = "src/main.rs", search = "version = \"[a-z0-9\\.-]+\"", replace = "version = \"{{version}}\"" },
]

[dependencies]
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
clap = { version = "4.5.54", features = ["derive"] }
fastembed = "5.8.0"
futures-util = "0.3.31"
grep = "0.4.1"
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.25"
lancedb = { version = "0.23.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
config = "0.14.0"
indicatif = "0.17.8"
colored = "2.2.0"
dirs = "5.0.1"
tree-sitter = "0.24"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.0"
tree-sitter-go = "0.23"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.23"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23.2"
tree-sitter-bash = "0.23"
tree-sitter-powershell = "0.24.5"
# tree-sitter-dockerfile = "0.2"
tree-sitter-yaml = "0.7"
tree-sitter-json = "0.24"
minijinja = { version = "2.14.0", features = ["loader"] }
tree-sitter-zig = "1.1.2"
tree-sitter-elixir = "0.3.4"
tree-sitter-haskell = "0.23.1"
tree-sitter-solidity = "1.2.13"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tantivy = "0.22"
anyhow = "1.0.100"
thiserror = "1.0"
tiktoken-rs = { version = "0.5", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "json",
    "local-time",
] }
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
tracing-appender = "0.2.4"
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
sysinfo = "0.30"
tracing-chrome = "0.7"
opentelemetry = { version = "0.22", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = [
    "tonic",
    "metrics",
    "logs",
] }
tracing-opentelemetry = "0.23"
opentelemetry-prometheus = "0.15"
prometheus = "0.13"

[dev-dependencies]
http-body-util = "0.1.3"
mime = "0.3.17"
tempfile = "3.24.0"
tower = { version = "0.5.3", features = ["util"] }
reqwest = { version = "0.12", features = ["json"] }
proptest = "1.4"
criterion = "0.5"
assert_cmd = "2.0"
predicates = "3.1"

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "search"
harness = false

[[test]]
name = "integration"
path = "tests/integration/main.rs"
